--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "fullstack video game trading app",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "db:init": "psql -U postgres -f db/schema.sql",
     "db:seed": "psql -U postgres -f db/seed.sql",
     "test": "echo \"Error: no test specified\" && exit 1"
